# podcast_translation

./: .env.example  .gitignore  README.md  config-example.yaml  config.py  config.yaml  good_podcast_list.md  main.py  pyproject.toml  requirements.txt  test_audio_feature_lab.py  test_audio_quality_scorer.py  test_quality_verify.py  test_tts_garbled.py  test_tts_preprocessor_unit.py  test_voiceprint_selection.py  tts_quality_lab.py
asr/: aliyun_asr.py  audio_splitter.py  base.py
core/: app_factory.py  audio_utils.py  pipeline.py  progress.py  shownote_generator.py  tts_preprocessor.py  tts_quality_lab.py
data/: progress.db
doc/: COSYVOICE_VOICE_CLONE_GUIDE.md  create_voice_clone.py  podcast-translation-skill-contract.md  podcast-translation-skill-technical-design.md  todo.md
pipeline/: orchestrator.py  progress_tracker.py
podcast_tool/: __init__.py  cli.py  jsonio.py  process.py  rss.py  runner.py  state.py  worker.py
providers/: baidu_llm.py  baidu_stt.py  base.py  cosyvoice_tts.py  dashscope_llm.py  dashscope_stt.py  oss_storage.py
rss/: audio_downloader.py  feed_parser.py
script/find_short/: find_short_episodes.py
script/rss_test1/: result.csv  result.opml  result_valid_rss.txt  rss_validator.py
script/rss_test2/: result.csv  result.opml  result_valid_rss.txt  rss_validator.py
script/rss_test3/: result.csv  result.opml  rss_validator.py  (+1 more)
scripts/: compare_tts_models.py  search_podcast_rss.py
translator/: base.py  prompt_templates.py  qwen_translator.py
tts/: aliyun_tts.py  audio_merger.py  base.py  voice_cloner.py
utils/: logger.py  retry.py
(+5 files in other folders)
